# uC-FS

./: CMakeLists.txt
Dev/FileDisk/: fs_dev_filedisk.c  fs_dev_filedisk.h
Dev/NAND/BSP/: bsp_fs_dev_nand_ctrlr_file.c  bsp_fs_dev_nand_ctrlr_file.h
Dev/NAND/Ctrlr/: fs_dev_nand_ctrlr_file.c  fs_dev_nand_ctrlr_file.h
Dev/NAND/Ctrlr/FileExt/: fs_dev_nand_ctrlr_file_soft_ecc.c  fs_dev_nand_ctrlr_file_soft_ecc.h
Dev/NOR/BSP/: bsp_fs_dev_nor_file.c  bsp_fs_dev_nor_file.h
Dev/NOR/PHY/: fs_dev_nor_mmap.c  fs_dev_nor_mmap.h
OS/FreeRTOS/: fs_os.c  fs_os.h  uC-FS-OS.cmake
OS/uCOS-II/: uC-FS-OS.cmake
OS/uCOS-III/: uC-FS-OS.cmake
Source/: fs_cfg_fs.h  fs_def.h  fs_file.c  fs_sys.c
exFAT/: fs_exfat.c  fs_exfat.h  fs_exfat_entry.c  fs_exfat_entry.h  fs_exfat_file.c  fs_exfat_file.h  fs_exfat_type.h
